class based views and serializers

--- a/server/src/templates/src/home.html
+++ b/server/src/templates/src/home.html
@@ -1,5 +1,5 @@
 {% extends "src/header.html" %}
 
 {% block content %}
-    Welcome to the Twitter
-{% endblock %}
+    Welcome to Twitter
+{% endblock content %}
